--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
   datasource:
     name: terablog
     url:  ${MYSQL_DATABASE:jdbc:mariadb://127.0.0.1:3306/terablog?useSSL=false&characterEncoding=utf8}
-    username: ${MYSQL_USERNAME:cooder}
-    password: ${MYSQL_PASSWORD:123456}
+    username: ${MYSQL_USERNAME:terablog-servcie}
+    password: ${MYSQL_PASSWORD:terablog_demo}
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: org.mariadb.jdbc.Driver
     hikari:
@@ -27,7 +27,7 @@ spring:
       max-file-size: 2MB  #设置支持的单个上传文件大小
       max-request-size: 6MB  #设置最大的请求文件大小，设置总体大小的请求
       file-size-threshold: 512KB #当上传文件达到指定配置量的时候，会将文件内容写入到磁盘
-      location: /   #设置上传文件的临时目录
+      location: /home/cooder/service/terablog-project/tmp   #设置上传文件的临时目录
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/*/*.xml
@@ -48,6 +48,6 @@ logging:
   config: classpath:config/spring-logback.xml
 
 github:
-  clientId: 9282661fdc9ad8b1fa88
-  clientSecret: ad9d6510bf3e415236b390e1a5d2edcb4452bcc6
-  redirectUri: http://127.0.0.1:8086/api/terablog-service/auth/github-info/v1/get
+  clientId:
+  clientSecret:
+  redirectUri:
