--- a/src/main/resources/resource/error-message-zh.properties
+++ b/src/main/resources/resource/error-message-zh.properties
@@ -1,12 +1,12 @@
-00000=????
-00001=????
-00002=?????
-00003=?????
-00004=?????
-00005=????????
-00006=??????,??????!!!
-00007=????
-00008=??????
-00997=?????
-00998=?????
-00999=?????
+00000=操作成功!
+00001=操作失败!
+00002=数据不存在!
+00003=账户未激活!
+00004=账户已关闭!
+00005=账号或密码错误!
+00006=操作太频繁,请稍后再试试！
+00007=参数错误!
+00008=非法Token!
+00997=无操作权限!
+00998=拒绝访问!
+00999=会话超时!
